@@ -1,4 +1,5 @@
-var utils = require("./utils"),
+var strata = require("./index"),
+    utils = require("./utils"),
     Mapper = require("./mapper");
 
 module.exports = Builder;
@@ -49,10 +50,10 @@ Builder.prototype.map = function map(location, callback) {
 }
 
 /**
- * Specifies the given `app` to run at the root of this builder.
+ * Specifies the `app` to run at the root of this Builder.
  */
 Builder.prototype.run = function run(app) {
-    this.app = app;
+    this.app = strata.app(app);
 }
 
 /**
