@@ -14,6 +14,7 @@ exports.version = [0, 8, 2];
 
 exports.run = run;
 exports.createServer = createServer;
+exports.app = makeApp;
 exports.env = makeEnv;
 exports.call = call;
 exports.handleError = handleError;
@@ -68,16 +69,8 @@ function run(app, opts, callback) {
  * a `toApp` function that returns one (e.g. a strata.Builder).
  */
 function createServer(app, opts) {
+    app = makeApp(app);
     opts = opts || {};
-
-    // The app may be any object that has a toApp method (e.g. a Builder).
-    if (typeof app.toApp == "function") {
-        app = app.toApp();
-    }
-
-    if (typeof app != "function") {
-        throw new StrataError("App must be a function");
-    }
 
     var server, protocol;
     if (opts.key && opts.cert) {
@@ -150,6 +143,27 @@ function createServer(app, opts) {
     });
 
     return server;
+}
+
+/**
+ * Creates a valid Strata application from the given `obj` and performs some
+ * quick sanity checks to make sure the app is valid.
+ */
+function makeApp(obj) {
+    // May be any object that has a toApp method (e.g. a Builder).
+    if (typeof obj.toApp == "function") {
+        obj = obj.toApp();
+    }
+
+    if (typeof obj != "function") {
+        throw new StrataError("App must be a function");
+    }
+
+    if (obj.length != 2) {
+        throw new StrataError("App must accept two arguments");
+    }
+
+    return obj;
 }
 
 /**
