@@ -53,8 +53,11 @@ Mapper.prototype.map = function map(location, app) {
     this._mappings.push([host, location, matcher, app]);
 }
 
+/**
+ * Specifies the `app` to run when no mappings match.
+ */
 Mapper.prototype.run = function run(app) {
-    this.app = app;
+    this.app = strata.app(app);
 }
 
 Mapper.prototype.call = function call(env, callback) {
