@@ -70,8 +70,11 @@ for (var method in methods) {
     })(methods[method]);
 }
 
+/**
+ * Specifies the `app` to run when no routes match.
+ */
 Router.prototype.run = function run(app) {
-    this.app = app;
+    this.app = strata.app(app);
 }
 
 Router.prototype.call = function call(env, callback) {
